# TreeSegmentation

./: .gitignore  CMakeLists.txt  DocConfig.txt  Evaluation.cpp  Evaluation.h  Image.cpp  Image.h  Preprocessing.cpp  Preprocessing.h  README.txt  Segmentation.cpp  Segmentation.h  Watershed.cpp  Watershed.h  main.cpp  newFile.txt
docs/html/: Evaluation_8cpp.html  Evaluation_8cpp__incl.dot  Evaluation_8h.html  Evaluation_8h__dep__incl.dot  Evaluation_8h_source.html  Image_8cpp.html  Image_8cpp__incl.dot  Image_8h.html  Image_8h__dep__incl.dot  Image_8h_source.html  Preprocessing_8cpp.html  Preprocessing_8cpp__incl.dot  Preprocessing_8h.html  Preprocessing_8h__dep__incl.dot  Preprocessing_8h_source.html  Segmentation_8cpp.html  Segmentation_8cpp__incl.dot  Segmentation_8h.html  Segmentation_8h__dep__incl.dot  (+28 more)
notes/: 15_aug_thresholdValues.txt
output/: contourHillEasy_buck.csv  contourHillJoinEasy_buck.csv  contourHillJoinSmallEasy_buck.csv  contourHillJoinSmall_buck.csv  contourHillJoinSpread_buck.csv  contourHillJoin_buck.csv  contourHillSmallEasy_buck.csv  contourHillSmallSpread_buck.csv  contourHillSmall_buck.csv  contourHillSpread_buck.csv  contourHill_buck.csv  flatSmallEasy_buck.csv  flatSmallSpread_buck.csv  flatSmall_buck.csv  gentleEasy_buck.csv  gentleSmallEasy_buck.csv  gentleSmall_buck.csv  gentleSpread_buck.csv  gentle_buck.csv  hillsEasy_buck.csv  hillsSmallEasy_buck.csv  hillsSmall_buck.csv  hillsSmooth_buck.csv  hillsSpread_buck.csv  hills_buck.csv  steepEasy_buck.csv  steepSmallEasy_buck.csv  steepSmall_buck.csv  steepSpread_buck.csv  steep_buck.csv
(+39 files in other folders)
